still fixing whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@
   height: 5em;
 }
 .form-checkboxes ul li:first-child {
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 .form-checkboxes ul li {
@@ -131,12 +131,6 @@
   padding-right: 2em;
 } */
 
-#mc_embed_signup{
-    padding: 0em 3em 0em 3em;
-}
-#mc_embed_signup .mc-field-group {
-    padding-bottom: 0%;
-}
 
 input{
   margin-bottom: 0em;
