--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -126,7 +126,7 @@ body {
   line-height: 1.6;
   font-weight: 500;
   font-family: 'p22-underground', Helvetica, 'sans-serif';
-  color: #222; 
+  color: #222;
 }
 /*changed font-family*/
 
@@ -134,7 +134,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   font-weight: 300; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
@@ -260,7 +260,7 @@ textarea {
 textarea {
   min-height: 65px;
   padding-top: 6px;
-  padding-bottom: 6px; }
+  padding-bottom: 0px; }
 input[type="email"]:focus,
 input[type="number"]:focus,
 input[type="search"]:focus,
@@ -348,7 +348,7 @@ input,
 textarea,
 select,
 fieldset {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 0.2rem; }
 pre,
 blockquote,
 dl,
